hw12_13_14_15_calendar/kubernetes_manifests/calendar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
        - name: calendar
          image: 45644/calendar:1.0
          ports:
            - containerPort: 8085
          args: [ "-database=sql", "-transport=http" ]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
