hw12_13_14_15_calendar/kubernetes_manifests/calendar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress
spec:
  rules:
    - http:
        paths:
          - path: /calendar
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  number: 8085
